--- a/index.html
+++ b/index.html
@@ -4,15 +4,9 @@
 <head>
     <meta charset="UTF-8"/>
     <title>Tudo sobre Google Glass</title>
-    <style>
-        p {
-            text-align: justify;
-            text-indent: 50px;
-        }
-
-    </style>
+    <link rel="stylesheet" type="text/css" href="_css/estilo.css"/>
 </head>
-<body >
+<body>
     <div id="interface">
         <header id="cabecalho">
             <hgroup>
@@ -20,14 +14,19 @@
                 <h2>A revolução do Google está chegando</h2>
             </hgroup>
 
-            <img src="_imagens/glass-oculos-preto-peq.png">
+            
+            <img id="icone" src="_imagens/glass-oculos-preto-peq.png">
 
-        Menu Principal
-        - Home
-        - Especificações
-        - Fotos
-        - Multimídia
-        - Fale conosco
+            <nav id="menu">
+                <h1>Menu Principal</h1>
+                <ul type="disc">
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="specs.html">Especificações</a></li>
+                    <li><a href="fotos.html">Fotos</a></li>
+                    <li><a href="multimidia.html">Multimídia</a></li>
+                    <li><a href="fale-conosco.html">Fale conosco</a></li>
+                </ul>
+            </nav>
 
         </header>
 
@@ -39,9 +38,15 @@
         </hgroup>
 
         <h1>O que é</h1>
-        <p>O <span style="font-weight: 900;">Google Glass</span> é um acessório em forma de óculos que possibilita a interação dos usuários com diversos conteúdos em realidade aumentada. Também chamado de <i>Project Glass</i>, o eletrônico é capaz de tirar fotos a partir de comandos de voz, enviar mensagens instantâneas e realizar vídeo&shy;con&shy;ferên&shy;cias. Seu lançamento está previsto para 2014, e seu preço deve ser de US$ 1,5 mil. Atualmente o <em>Google Glass</em> encontra-se em fase de testes e já possui um vídeo totalmente gravado com o dispositivo. Além disso, a companhia de buscas registrou novas patentes anti-furto e de desbloqueio de tela para o acessório.</p>
+        <p>O <span style="font-weight: 900;">Google Glass</span> é um acessório em forma de óculos que possibilita a interação dos usuários com diversos conteúdos em realidade aumentada. Também chamado de <a href="http://glass.google.com" target="_blank">Project Glass</a>, o eletrônico é capaz de tirar fotos a partir de comandos de voz, enviar mensagens instantâneas e realizar vídeo&shy;con&shy;ferên&shy;cias. Seu lançamento está previsto para 2014, e seu preço deve ser de US$ 1,5 mil. Atualmente o <em>Google Glass</em> encontra-se em fase de testes e já possui um vídeo totalmente gravado com o dispositivo. Além disso, a companhia de buscas registrou novas patentes anti-furto e de desbloqueio de tela para o acessório.</p>
 
-        [AQUI ENTRA UMA FOTO]
+        <figure class="foto-legenda">
+            <img src="_imagens/glass-quadro-homem-mulher.jpg">
+            <figcaption>
+                <h3>Google Glass</h3>
+                Uma nova maneira de ver o mundo
+            </figcaption>
+        </figure>
 
         <h1>Data de lançamento</h1>
         <p>Não há uma data específica e oficial para o dispositivo ser lançado, ainda. Pode ser que ele esteja disponível em demonstrações a partir de 2013, mas seu lançamento para as lojas fica para, pelo menos, 2014.</p>
