--- a/google-glass.html
+++ b/google-glass.html
@@ -8,6 +8,7 @@
         body {
             font-family: Arial;
             font-size: 10pt;
+            overflow: hidden;
         }
 
         p {
@@ -38,6 +39,8 @@
             float: right;
             margin-left: 5px;
         }
+
+        
 
     </style>
 </head>
